# automatic_calibration_camera_lidar

./: CMakeLists.txt  README.md  package.xml
calibrationParameters/: calibrationParameters.yaml
config/: calibrationConfig.yaml  cameraIntrinsicParameters.yaml  checkMiscalibrationConfig.yaml  custom_rosconsole.conf  simulateCalibrationConfig.yaml  simulateCalibrationConfigSetup2.yaml
includeTools/eigenTools/: generalTools.cpp  generalTools.hpp  rotationMatrixTools.cpp  rotationMatrixTools.hpp
includeTools/imageTools/: generalProcessingTool.cpp  generalProcessingTool.hpp  projectionTool.cpp  projectionTool.hpp  smoothEdgeTool.cpp  smoothEdgeTool.hpp  sphericalWarperTool.cpp  sphericalWarperTool.hpp
includeTools/optimizationProblemTools/: ceresSolver3Dto2DTool.cpp  ceresSolver3Dto2DTool.hpp  circleParametersOptimization.cpp  circleParametersOptimization.hpp  eigenSolver3Dto3DTool.cpp  eigenSolver3Dto3DTool.hpp  functor3Dto2D.cpp  functor3Dto3D.cpp  removeOutliersListTool.cpp  removeOutliersListTool.hpp  several3Dto2DCalibrationTool.cpp  several3Dto2DCalibrationTool.hpp  several3Dto3DCalibrationTool.cpp  several3Dto3DCalibrationTool.hpp
includeTools/pointCloudTools/: clusterTool.cpp  clusterTool.hpp  cropboxTool.cpp  cropboxTool.hpp  normalEstimationTool.cpp  normalEstimationTool.hpp  planeSegmentationTool.cpp  planeSegmentationTool.hpp  rangeImageTool.cpp  rangeImageTool.hpp  sphereSegmentationTool.cpp  sphereSegmentationTool.hpp
includeTools/rosTools/: publishTools.cpp  publishTools.hpp
launch/: calibrate.launch  checkMiscalibration.launch  idealSimulateCalibration.launch  recordVelodyne.launch  simulateCalibration.launch  worldSetups.launch
models/cartonBox/: model.config  model.sdf
models/concrete_floor/: model.config  model.sdf
models/concrete_wall/: model.config  model.sdf
models/materials/scripts/: carton.material  concrete.material  polyspan.material  wood.material
models/spheric_target_setup_0/: model.config  model.sdf
models/spheric_target_setup_1/: model.config  model.sdf
models/spheric_target_setup_2/: model.config  model.sdf
models/woodBox/: model.config  model.sdf
rviz_config/: calibration.rviz  checkMiscalibration.rviz  simulation.rviz
source/: addMiscalibration.hpp  calibrateSensors.cpp  calibrateSensors.hpp  checkMiscalibrationSensors.cpp  checkMiscalibrationSensors.hpp  findSphericalTargetImage.cpp  findSphericalTargetImage.hpp  findSphericalTargetPointCloud.cpp  findSphericalTargetPointCloud.hpp
source/simulation/: animatedSphereSetup0.cpp  animatedSphereSetup1.cpp  animatedSphereSetup2.cpp  idealCalibrateSensors.cpp  idealCalibrateSensors.hpp  publishCameraInfo.cpp  simulateCalibrateSensors.cpp  simulateCalibrateSensors.hpp
urdf/: sensors.xacro
urdf/sensors/: camera.xacro
worlds/: calibration_world_setup_0.world  calibration_world_setup_1.world  calibration_world_setup_2.world
